--- a/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
+++ b/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
@@ -15,6 +15,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -167,8 +170,12 @@
           <SubComponents>
             <Component class="javax.swing.JTextField" name="rawFileTextField">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="horizontalAlignment" type="int" value="0"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="rawFileTextFieldMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="browseRawFileButton">
               <Properties>
@@ -180,7 +187,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="rawFileLabel">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Raw File"/>
+                <Property name="text" type="java.lang.String" value="Raw File(s)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="outputFolderLabel">
@@ -190,6 +197,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="outputFolderTextField">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="horizontalAlignment" type="int" value="0"/>
               </Properties>
             </Component>
