--- a/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
+++ b/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
@@ -89,13 +89,13 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="inputAndOutputPanel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="settingsPanel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="progressPanel" max="32767" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="2" attributes="0">
@@ -284,7 +284,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="progressScrollPane" pref="204" max="32767" attributes="0"/>
+                      <Component id="progressScrollPane" pref="160" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -367,12 +367,12 @@
                           <Component id="peakPickingComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="peakPickingLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="errorHandlingLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="errorHandlingComboBox" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="errorHandlingComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="errorHandlingLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -466,10 +466,11 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="2">
-                    <StringItem index="0" value="Native Thermo library peak picking"/>
-                    <StringItem index="1" value="No peak picking"/>
+                    <StringItem index="0" value="No peak picking"/>
+                    <StringItem index="1" value="Native Thermo library peak picking"/>
                   </StringArray>
                 </Property>
+                <Property name="selectedIndex" type="int" value="1"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -477,7 +478,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="peakPickingLabel">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Peak picking"/>
+                <Property name="text" type="java.lang.String" value="Peak Picking"/>
               </Properties>
             </Component>
           </SubComponents>
