Updated ThermoRawFileParser to version 1.3.0, adding support for extracting additional detector data. Moved project to version 1.4.2.

--- a/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
+++ b/src/main/java/no/uib/raw_file_parser_gui/ThermoRawFileParserGUI.form
@@ -291,7 +291,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="progressScrollPane" max="32767" attributes="0"/>
+                      <Component id="progressScrollPane" pref="187" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="totalProgressBar" min="-2" max="-2" attributes="0"/>
@@ -372,6 +372,11 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="compressionComboBox" max="32767" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="allDetectorsLabel" min="-2" pref="80" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="allDetectorsComboBox" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -394,6 +399,11 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="metadataFormatLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="metadataFormatComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="allDetectorsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="allDetectorsComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -458,6 +468,28 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="metadataFormatComboBoxActionPerformed"/>
+              </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="allDetectorsLabel">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="All Detectors"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JComboBox" name="allDetectorsComboBox">
+              <Properties>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="2">
+                    <StringItem index="0" value="Yes"/>
+                    <StringItem index="1" value="No"/>
+                  </StringArray>
+                </Property>
+                <Property name="selectedIndex" type="int" value="1"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="allDetectorsComboBoxActionPerformed"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
